{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "CameraControl",
            "id": "def3d30e-1f27-4d98-930b-228d78b771db",
            "actions": [
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "1c0a8d52-3902-4e31-8ad9-81ffe7aa0af9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "adbb82a9-a8b2-46d2-99b2-705884bd4403",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CharacterControl",
            "id": "ec24f5cf-ab8c-48d8-9807-3a67f39aedb4",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "7fd9fd06-bbb6-4309-865a-596c261ece60",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "0e4f3162-5359-48cf-96ab-6f2fadf8e10f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "9ce38acb-8d99-4701-a99e-6861ab02e849",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "c373fdff-60d9-4475-8dc6-5ead1fb83acb",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "bcb45f05-2eff-4006-bdb6-46b01b732096",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0a54ccbb-c696-453e-a0bf-c23d28afd403",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "bb51b9ec-d6de-4dfe-979e-ea15624b449c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3b5b8e67-bd5e-41bd-b93d-0e9b008a0393",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "40459961-96c6-4753-acc9-6622acec0bfa",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "54e6b540-66c2-4e10-b1ba-6d2cf01c2b65",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "LevelChose",
            "id": "bd651e78-974d-44a3-a763-796383d180ad",
            "actions": [
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "fcd62f1e-5561-47a9-98be-b8589068ee40",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b0caf321-6c0c-4ea6-83cb-92fcb76e8d0b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PauseUI",
            "id": "bd8e9b8d-4fbe-4209-98c6-20bde91dcb71",
            "actions": [
                {
                    "name": "Resume",
                    "type": "Button",
                    "id": "12c4f962-663b-4f27-8471-62fb98e1b133",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ac417554-2f0e-4b6c-9c9a-4d27052262df",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Resume",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}